<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/colorDark"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/dodaj_pecivo_naziv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/naziv_peciva"
        android:textColorHint="@color/colorRED"
        android:textColor="@color/colorRED"/>

    <EditText
        android:id="@+id/dodaj_pecivo_opis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/opis_peciva_sastojci"
        android:textColorHint="@color/colorRED"
        android:textColor="@color/colorRED"/>

    <EditText
        android:id="@+id/dodaj_pecivo_cena"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number|numberDecimal"
        android:hint="@string/cena_peciva"
        android:textColorHint="@color/colorRED"
        android:textColor="@color/colorRED"/>

    <LinearLayout
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/dodaj_pecivo_button_confirm"
            android:textSize="20sp"
            android:text="@string/potvrdi"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/dodaj_pecivo_button_cancel"
            android:textSize="20sp"
            android:text="@string/odustani"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>


</LinearLayout>